# Vectoria

./: Cargo.toml  INSTALLATION.md  Makefile  Ozzy_Osbourne.txt  README.md  download_model.sh  embeddings.db  install.sh  package.json  uninstall.sh  vecto.toml.example
.github/workflows/: release.yml
Formula/: vecto.rb
src/: main.rs
