[package]
name = "Vectoria"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vecto"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.15"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
