[package]
name = "vecto"
version = "0.1.0"
edition = "2021"
authors = ["Yashaswa Varshney yswa.var@icloud.com"]
description = "A powerful personal note management system with semantic search capabilities"
license = "MIT"
repository = "https://github.com/yswa-var/Vectoria"
keywords = ["cli", "notes", "search", "embeddings", "ai", "vector"]
categories = ["command-line-utilities", "text-processing", "database"]
readme = "README.md"

[[bin]]
name = "vecto"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.15"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
